--- a/genindex.html
+++ b/genindex.html
@@ -156,6 +156,7 @@
  | <a href="#D"><strong>D</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
@@ -181,6 +182,10 @@
       <li><a href="mathematics/linear_algebra/Theory.html#index-3">Basis</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Intro to Python/Flow_control_statements.html#index-0">Break and continue statements</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="C">C</h2>
@@ -190,13 +195,15 @@
 </li>
       <li><a href="geosciences/Cartography_Cartopy.html#index-1">Cartopy: plotting shapefiles</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/complex analysis/Introduction.html#index-0">Complex conjugate</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/complex analysis/intro.html#index-0">Complex numbers</a>
 </li>
       <li><a href="mathematics/complex analysis/compplane.html#index-0">Complex plane</a>
+</li>
+      <li><a href="coding/Intro to Python/Functions.html#index-0">Creating functions</a>
 </li>
   </ul></td>
 </tr></table>
@@ -207,11 +214,21 @@
       <li><a href="mathematics/complex analysis/compplane.html#index-2">De Moivre&#39;s formula</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Intro to Python/Dictionaries.html#index-0">Dictionaries</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Intro to Python/File_handling.html#index-0">File handling</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Intro to Python/Printing_and_formatting_statements.html#index-1">Formatted printing</a>
+</li>
       <li><a href="mathematics/Fractals.html#index-0">Fractals</a>
 </li>
   </ul></td>
@@ -225,13 +242,25 @@
   </ul></td>
 </tr></table>
 
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Intro to Python/Handling_errors.html#index-0">Handling errors</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-3">Inner product</a>
+      <li><a href="coding/Intro to Python/If_statement.html#index-0">If statement</a>
+</li>
+      <li><a href="coding/Intro to Python/Importing.html#index-0">Importing modules</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-3">Inner product</a>
+</li>
       <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-3">Invariants</a>
 </li>
   </ul></td>
@@ -242,9 +271,19 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Theory.html#index-1">Linear combination</a>
 </li>
+      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-5">Linear transformation</a>
+</li>
+      <li><a href="coding/Intro to Python/Lists.html#index-0">Lists</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-5">Linear transformation</a>
+      <li><a href="coding/Intro to Python/List_comprehensions.html#index-0">Lists: list comprehensions</a>
+</li>
+      <li><a href="coding/Intro to Python/Nested_lists.html#index-0">Lists: nested lists</a>
+</li>
+      <li><a href="coding/Intro to Python/For_loops.html#index-0">Loops: for loop</a>
+</li>
+      <li><a href="coding/Intro to Python/While_loops.html#index-0">Loops: while loops</a>
 </li>
   </ul></td>
 </tr></table>
@@ -252,6 +291,8 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Intro to Python/Matplotlib.html#index-0">Matplotlib plotting</a>
+</li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-1">Matrix-matrix multiplication</a>
 </li>
   </ul></td>
@@ -288,8 +329,6 @@
 </li>
       <li><a href="coding/Pandas/Pandas_3merge_combine_group_sort.html#index-0">Pandas: merging</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Pandas/Pandas_6plotting.html#index-0">Pandas: plotting</a>
 </li>
       <li><a href="coding/Pandas/Pandas_1basics.html#index-1">Pandas: reading and writing files</a>
@@ -298,13 +337,29 @@
 </li>
       <li><a href="coding/Pandas/Pandas_3merge_combine_group_sort.html#index-3">Pandas: sorting</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Pandas/Pandas_4summary_statistics.html#index-0">Pandas: summary stats</a>
+</li>
+      <li><a href="coding/Intro to Python/Flow_control_statements.html#index-1">Pass statement</a>
 </li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-2">Permutations</a>
 </li>
       <li><a href="geosciences/Dynamic_Earth.html#index-0">Plate tectonics</a>
 </li>
+      <li><a href="coding/Intro to Python/Matplotlib.html#index-5">Plots: 3D</a>
+</li>
+      <li><a href="coding/Intro to Python/Matplotlib.html#index-3">Plots: histogram</a>
+</li>
+      <li><a href="coding/Intro to Python/Matplotlib.html#index-4">Plots: image</a>
+</li>
+      <li><a href="coding/Intro to Python/Matplotlib.html#index-1">Plots: line</a>
+</li>
+      <li><a href="coding/Intro to Python/Matplotlib.html#index-2">Plots: scatter</a>
+</li>
       <li><a href="mathematics/complex analysis/compplane.html#index-1">Polar form of complex numbers</a>
+</li>
+      <li><a href="coding/Intro to Python/Printing_and_formatting_statements.html#index-0">Python basics</a>
 </li>
   </ul></td>
 </tr></table>
@@ -313,6 +368,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="geosciences/Dynamic_Earth.html#index-1">Seafloor age</a>
+</li>
+      <li><a href="coding/Intro to Python/Sets.html#index-0">Sets</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -328,17 +385,23 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="geosciences/Tides.html#index-1">Tidal frequencies</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="geosciences/Tides.html#index-0">Tides</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-2">Trace</a>
+</li>
+      <li><a href="coding/Intro to Python/Tuples.html#index-0">Tuples</a>
 </li>
   </ul></td>
 </tr></table>
 
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Intro to Python/Variables.html#index-0">Variables</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Theory.html#index-0">Vector space</a>
 </li>
