--- a/coding/NumPy_Arrays.html
+++ b/coding/NumPy_Arrays.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Plotting data with Matplotlib" href="Matplotlib.html" />
-    <link rel="prev" title="File handling in Python" href="File_handling.html" />
+    <link rel="next" title="Introduction to Python programming language" href="Intro to Python/intro.html" />
+    <link rel="prev" title="The Python Programming Language" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -73,59 +73,11 @@
   <li class="active">
     <a href="intro.html">Coding</a>
   <ul class="nav sidenav_l2">
-    <li class="">
-      <a href="Sets.html">Sets</a>
-    </li>
-    <li class="">
-      <a href="Dictionaries.html">Dictionaries</a>
-    </li>
-    <li class="">
-      <a href="For_loops.html">For Loops</a>
-    </li>
-    <li class="">
-      <a href="Variables.html">Variables</a>
-    </li>
-    <li class="">
-      <a href="Nested_lists.html">Nested Lists</a>
-    </li>
-    <li class="">
-      <a href="List_comprehensions.html">List Comprehensions</a>
-    </li>
-    <li class="">
-      <a href="Lists.html">Lists</a>
-    </li>
-    <li class="">
-      <a href="While_loops.html">While Loops</a>
-    </li>
-    <li class="">
-      <a href="Tuples.html">Tuples</a>
-    </li>
-    <li class="">
-      <a href="Functions.html">Functions</a>
-    </li>
-    <li class="">
-      <a href="If_statement.html">If Statement</a>
-    </li>
-    <li class="">
-      <a href="Flow_control_statements.html">Flow Control Statements</a>
-    </li>
-    <li class="">
-      <a href="Handling_errors.html">Handling Errors</a>
-    </li>
-    <li class="">
-      <a href="File_handling.html">File Handling</a>
-    </li>
     <li class="active">
       <a href="">Numpy Arrays</a>
     </li>
     <li class="">
-      <a href="Matplotlib.html">Matplotlib</a>
-    </li>
-    <li class="">
-      <a href="Printing_and_formatting_statements.html">Printing And Formatting Statements</a>
-    </li>
-    <li class="">
-      <a href="Importing.html">Importing</a>
+      <a href="Intro to Python/intro.html">Intro To Python</a>
     </li>
     <li class="">
       <a href="Pandas/intro.html">Pandas</a>
@@ -522,8 +474,8 @@ A[:, ::-1] =
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="File_handling.html" title="previous page">File handling in Python</a>
-    <a class='right-next' id="next-link" href="Matplotlib.html" title="next page">Plotting data with Matplotlib</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">The Python Programming Language</a>
+    <a class='right-next' id="next-link" href="Intro to Python/intro.html" title="next page">Introduction to Python programming language</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
