--- a/coding/Pandas/Pandas_6plotting.html
+++ b/coding/Pandas/Pandas_6plotting.html
@@ -74,58 +74,10 @@
     <a href="../intro.html">Coding</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../Sets.html">Sets</a>
-    </li>
-    <li class="">
-      <a href="../Dictionaries.html">Dictionaries</a>
-    </li>
-    <li class="">
-      <a href="../For_loops.html">For Loops</a>
-    </li>
-    <li class="">
-      <a href="../Variables.html">Variables</a>
-    </li>
-    <li class="">
-      <a href="../Nested_lists.html">Nested Lists</a>
-    </li>
-    <li class="">
-      <a href="../List_comprehensions.html">List Comprehensions</a>
-    </li>
-    <li class="">
-      <a href="../Lists.html">Lists</a>
-    </li>
-    <li class="">
-      <a href="../While_loops.html">While Loops</a>
-    </li>
-    <li class="">
-      <a href="../Tuples.html">Tuples</a>
-    </li>
-    <li class="">
-      <a href="../Functions.html">Functions</a>
-    </li>
-    <li class="">
-      <a href="../If_statement.html">If Statement</a>
-    </li>
-    <li class="">
-      <a href="../Flow_control_statements.html">Flow Control Statements</a>
-    </li>
-    <li class="">
-      <a href="../Handling_errors.html">Handling Errors</a>
-    </li>
-    <li class="">
-      <a href="../File_handling.html">File Handling</a>
-    </li>
-    <li class="">
       <a href="../NumPy_Arrays.html">Numpy Arrays</a>
     </li>
     <li class="">
-      <a href="../Matplotlib.html">Matplotlib</a>
-    </li>
-    <li class="">
-      <a href="../Printing_and_formatting_statements.html">Printing And Formatting Statements</a>
-    </li>
-    <li class="">
-      <a href="../Importing.html">Importing</a>
+      <a href="../Intro to Python/intro.html">Intro To Python</a>
     </li>
     <li class="active">
       <a href="intro.html">Pandas</a>
