--- a/coding/intro.html
+++ b/coding/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Sets" href="Sets.html" />
+    <link rel="next" title="NumPy Arrays" href="NumPy_Arrays.html" />
     <link rel="prev" title="Landing page" href="../intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -74,58 +74,10 @@
     <a href="">Coding</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Sets.html">Sets</a>
-    </li>
-    <li class="">
-      <a href="Dictionaries.html">Dictionaries</a>
-    </li>
-    <li class="">
-      <a href="For_loops.html">For Loops</a>
-    </li>
-    <li class="">
-      <a href="Variables.html">Variables</a>
-    </li>
-    <li class="">
-      <a href="Nested_lists.html">Nested Lists</a>
-    </li>
-    <li class="">
-      <a href="List_comprehensions.html">List Comprehensions</a>
-    </li>
-    <li class="">
-      <a href="Lists.html">Lists</a>
-    </li>
-    <li class="">
-      <a href="While_loops.html">While Loops</a>
-    </li>
-    <li class="">
-      <a href="Tuples.html">Tuples</a>
-    </li>
-    <li class="">
-      <a href="Functions.html">Functions</a>
-    </li>
-    <li class="">
-      <a href="If_statement.html">If Statement</a>
-    </li>
-    <li class="">
-      <a href="Flow_control_statements.html">Flow Control Statements</a>
-    </li>
-    <li class="">
-      <a href="Handling_errors.html">Handling Errors</a>
-    </li>
-    <li class="">
-      <a href="File_handling.html">File Handling</a>
-    </li>
-    <li class="">
       <a href="NumPy_Arrays.html">Numpy Arrays</a>
     </li>
     <li class="">
-      <a href="Matplotlib.html">Matplotlib</a>
-    </li>
-    <li class="">
-      <a href="Printing_and_formatting_statements.html">Printing And Formatting Statements</a>
-    </li>
-    <li class="">
-      <a href="Importing.html">Importing</a>
+      <a href="Intro to Python/intro.html">Intro To Python</a>
     </li>
     <li class="">
       <a href="Pandas/intro.html">Pandas</a>
@@ -235,7 +187,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../intro.html" title="previous page">Landing page</a>
-    <a class='right-next' id="next-link" href="Sets.html" title="next page">Sets</a>
+    <a class='right-next' id="next-link" href="NumPy_Arrays.html" title="next page">NumPy Arrays</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
