deploy: 430dae7ec9655a6e624e32ef5df15c13ed943c52

--- a/mathematics/Big_O_notation.html
+++ b/mathematics/Big_O_notation.html
@@ -98,6 +98,9 @@
       <a href="linear_algebra/intro.html">Linear_Algebra</a>
     </li>
     <li class="">
+      <a href="sets and functions/intro.html">Sets And Functions</a>
+    </li>
+    <li class="">
       <a href="complex analysis/intro.html">Complex Analysis</a>
     </li>
   </ul>
