--- a/mathematics/complex analysis/Introduction.html
+++ b/mathematics/complex analysis/Introduction.html
@@ -97,6 +97,9 @@
     <li class="">
       <a href="../linear_algebra/intro.html">Linear_Algebra</a>
     </li>
+    <li class="">
+      <a href="../sets and functions/intro.html">Sets And Functions</a>
+    </li>
     <li class="active">
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
