--- a/mathematics/complex analysis/intro.html
+++ b/mathematics/complex analysis/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Complex functions" href="compfuncs.html" />
-    <link rel="prev" title="Theory" href="../linear_algebra/Theory.html" />
+    <link rel="prev" title="Logic and proof" href="../sets and functions/logic.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -96,6 +96,9 @@
     </li>
     <li class="">
       <a href="../linear_algebra/intro.html">Linear_Algebra</a>
+    </li>
+    <li class="">
+      <a href="../sets and functions/intro.html">Sets And Functions</a>
     </li>
     <li class="active">
       <a href="">Complex Analysis</a>
@@ -220,7 +223,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../linear_algebra/Theory.html" title="previous page">Theory</a>
+    <a class='left-prev' id="prev-link" href="../sets and functions/logic.html" title="previous page">Logic and proof</a>
     <a class='right-next' id="next-link" href="compfuncs.html" title="next page">Complex functions</a>
 
     </div>
