--- a/mathematics/linear_algebra/Theory.html
+++ b/mathematics/linear_algebra/Theory.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Complex Numbers" href="../complex analysis/intro.html" />
+    <link rel="next" title="Sets and functions" href="../sets and functions/intro.html" />
     <link rel="prev" title="Basic definitions and operations" href="Basic_definitions_and_operations.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -110,6 +110,9 @@
         <a href="">Theory</a>
       </li>
     </ul>
+    </li>
+    <li class="">
+      <a href="../sets and functions/intro.html">Sets And Functions</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -720,7 +723,7 @@ a_{13} \left | \begin{array}{ccc} a_{21} &amp; a_{22} \\ a_{31} &amp; a_{32} \en
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Basic_definitions_and_operations.html" title="previous page">Basic definitions and operations</a>
-    <a class='right-next' id="next-link" href="../complex analysis/intro.html" title="next page">Complex Numbers</a>
+    <a class='right-next' id="next-link" href="../sets and functions/intro.html" title="next page">Sets and functions</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
