--- a/genindex.html
+++ b/genindex.html
@@ -162,6 +162,7 @@
  | <a href="#M"><strong>M</strong></a>
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#V"><strong>V</strong></a>
@@ -195,10 +196,14 @@
 </li>
       <li><a href="geosciences/Cartography_Cartopy.html#index-1">Cartopy: plotting shapefiles</a>
 </li>
-      <li><a href="mathematics/complex analysis/Introduction.html#index-0">Complex conjugate</a>
+      <li><a href="mathematics/sets and functions/functions.html#index-1">Codomain</a>
+</li>
+      <li><a href="mathematics/sets and functions/sets.html#index-2">Commutative (Abelian) group</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/complex analysis/Introduction.html#index-0">Complex conjugate</a>
+</li>
       <li><a href="mathematics/complex analysis/intro.html#index-0">Complex numbers</a>
 </li>
       <li><a href="mathematics/complex analysis/compplane.html#index-0">Complex plane</a>
@@ -217,12 +222,16 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Intro to Python/Dictionaries.html#index-0">Dictionaries</a>
 </li>
+      <li><a href="mathematics/sets and functions/functions.html#index-0">Domain</a>
+</li>
   </ul></td>
 </tr></table>
 
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/sets and functions/sets.html#index-3">Field (mathematics)</a>
+</li>
       <li><a href="coding/Intro to Python/File_handling.html#index-0">File handling</a>
 </li>
   </ul></td>
@@ -240,6 +249,12 @@
       <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-1">Geometric multiplicity</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/sets and functions/functions.html#index-2">Graph (functions)</a>
+</li>
+      <li><a href="mathematics/sets and functions/sets.html#index-1">Group</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="H">H</h2>
@@ -255,10 +270,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Intro to Python/If_statement.html#index-0">If statement</a>
 </li>
-      <li><a href="coding/Intro to Python/Importing.html#index-0">Importing modules</a>
+      <li><a href="mathematics/sets and functions/functions.html#index-4">Image (functions)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="coding/Intro to Python/Importing.html#index-0">Importing modules</a>
+</li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-3">Inner product</a>
 </li>
       <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-3">Invariants</a>
@@ -275,11 +292,13 @@
 </li>
       <li><a href="coding/Intro to Python/Lists.html#index-0">Lists</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Intro to Python/List_comprehensions.html#index-0">Lists: list comprehensions</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Intro to Python/Nested_lists.html#index-0">Lists: nested lists</a>
+</li>
+      <li><a href="mathematics/sets and functions/logic.html#index-0">Logic symbols</a>
 </li>
       <li><a href="coding/Intro to Python/For_loops.html#index-0">Loops: for loop</a>
 </li>
@@ -364,13 +383,25 @@
   </ul></td>
 </tr></table>
 
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/sets and functions/functions.html#index-3">Restriction (functions)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="geosciences/Dynamic_Earth.html#index-1">Seafloor age</a>
 </li>
       <li><a href="coding/Intro to Python/Sets.html#index-0">Sets</a>
+
+      <ul>
+        <li><a href="mathematics/sets and functions/sets.html#index-0">(mathematics)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Theory.html#index-2">Spanning set</a>
