--- a/mathematics/Tensors_Review.html
+++ b/mathematics/Tensors_Review.html
@@ -98,6 +98,9 @@
       <a href="linear_algebra/intro.html">Linear_Algebra</a>
     </li>
     <li class="">
+      <a href="sets and functions/intro.html">Sets And Functions</a>
+    </li>
+    <li class="">
       <a href="complex analysis/intro.html">Complex Analysis</a>
     </li>
   </ul>
