--- a/mathematics/linear_algebra/intro.html
+++ b/mathematics/linear_algebra/intro.html
@@ -112,6 +112,9 @@
     </ul>
     </li>
     <li class="">
+      <a href="../sets and functions/intro.html">Sets And Functions</a>
+    </li>
+    <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
     </li>
   </ul>
