--- a/geosciences/Image_Operations.html
+++ b/geosciences/Image_Operations.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
+    <link rel="next" title="Particle Image Velocimetry (PIV)" href="Particle_Image_Velocimetry.html" />
     <link rel="prev" title="IMAGE FILTERING" href="Image_Filtering.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -84,6 +84,9 @@
     </li>
     <li class="active">
       <a href="">Image Operations</a>
+    </li>
+    <li class="">
+      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
     </li>
     <li class="">
       <a href="Cartography_Cartopy.html">Cartography Cartopy</a>
@@ -612,7 +615,7 @@ This is also frequently called histogram modification as it only alters the hist
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Image_Filtering.html" title="previous page">IMAGE FILTERING</a>
-    <a class='right-next' id="next-link" href="Cartography_Cartopy.html" title="next page">Creating maps in Cartopy</a>
+    <a class='right-next' id="next-link" href="Particle_Image_Velocimetry.html" title="next page">Particle Image Velocimetry (PIV)</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
