--- a/geosciences/Google_Earth_Engine_Foundations_.html
+++ b/geosciences/Google_Earth_Engine_Foundations_.html
@@ -86,6 +86,9 @@
       <a href="Image_Operations.html">Image Operations</a>
     </li>
     <li class="">
+      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
+    </li>
+    <li class="">
       <a href="Cartography_Cartopy.html">Cartography Cartopy</a>
     </li>
     <li class="">
