deploy: d5ab6cd74c439d5080a7620eda261cf12d3f6d8c

--- a/genindex.html
+++ b/genindex.html
@@ -154,6 +154,7 @@
  | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
@@ -184,6 +185,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-2">Bijection</a>
+</li>
       <li><a href="coding/Intro to Python/Flow_control_statements.html#index-0">Break and continue statements</a>
 </li>
   </ul></td>
@@ -208,6 +211,8 @@
 </li>
       <li><a href="mathematics/complex analysis/compplane.html#index-0">Complex plane</a>
 </li>
+      <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-3">Composition (functions)</a>
+</li>
       <li><a href="coding/Intro to Python/Functions.html#index-0">Creating functions</a>
 </li>
   </ul></td>
@@ -223,6 +228,14 @@
       <li><a href="coding/Intro to Python/Dictionaries.html#index-0">Dictionaries</a>
 </li>
       <li><a href="mathematics/sets and functions/functions.html#index-0">Domain</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/sets and functions/elementary_functions_1.html#index-0">Exponential function</a>
 </li>
   </ul></td>
 </tr></table>
@@ -263,6 +276,10 @@
       <li><a href="coding/Intro to Python/Handling_errors.html#index-0">Handling errors</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/sets and functions/elementary_functions_1.html#index-1">Hyperbolic functions</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="I">I</h2>
@@ -272,13 +289,21 @@
 </li>
       <li><a href="mathematics/sets and functions/functions.html#index-4">Image (functions)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Intro to Python/Importing.html#index-0">Importing modules</a>
 </li>
+      <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-0">Injection</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-3">Inner product</a>
 </li>
       <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-3">Invariants</a>
+</li>
+      <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-4">Inverse (functions)</a>
+</li>
+      <li><a href="mathematics/sets and functions/elementary_functions_2.html#index-1">Inverse hyperbolic functions (area)</a>
+</li>
+      <li><a href="mathematics/sets and functions/elementary_functions_2.html#index-0">Inverse trigonometric functions (arcus)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -408,6 +433,8 @@
 </li>
       <li><a href="mathematics/Statistics_for_Geoscientists.html#index-0">Statistics: basics</a>
 </li>
+      <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-1">Surjection</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -421,6 +448,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-2">Trace</a>
+</li>
+      <li><a href="mathematics/sets and functions/elementary_functions_1.html#index-2">Trigonometric functions</a>
 </li>
       <li><a href="coding/Intro to Python/Tuples.html#index-0">Tuples</a>
 </li>
