--- a/mathematics/sets and functions/sets.html
+++ b/mathematics/sets and functions/sets.html
@@ -101,7 +101,13 @@
       <a href="intro.html">Sets And Functions</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="elemfuncs.html">Elemfuncs</a>
+        <a href="composition_and_inverse.html">Composition And Inverse</a>
+      </li>
+      <li class="">
+        <a href="elementary_functions_2.html">Elementary Functions 2</a>
+      </li>
+      <li class="">
+        <a href="elementary_functions_1.html">Elementary Functions 1</a>
       </li>
       <li class="">
         <a href="functions.html">Functions</a>
