--- a/geosciences/Google_Earth_Engine_Getting_Started_.html
+++ b/geosciences/Google_Earth_Engine_Getting_Started_.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Index" href="../genindex.html" />
-    <link rel="prev" title="Google Earth Engine" href="Google_Earth_Engine_Foundations_.html" />
+    <link rel="next" title="Google Earth Engine" href="Google_Earth_Engine_Foundations.html" />
+    <link rel="prev" title="Downloading earthquake data" href="Seismology.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -106,11 +106,11 @@
     <li class="">
       <a href="Seismology.html">Seismology</a>
     </li>
-    <li class="">
-      <a href="Google_Earth_Engine_Foundations_.html">Google Earth Engine</a>
-    </li>
     <li class="active">
       <a href="">Google Earth Engine Getting Started</a>
+    </li>
+    <li class="">
+      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine</a>
     </li>
   </ul>
   </li>
@@ -333,8 +333,8 @@ For each dataset there is also a few lines of code provided showing how to best 
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Google_Earth_Engine_Foundations_.html" title="previous page">Google Earth Engine</a>
-    <a class='right-next' id="next-link" href="../genindex.html" title="next page">Index</a>
+    <a class='left-prev' id="prev-link" href="Seismology.html" title="previous page">Downloading earthquake data</a>
+    <a class='right-next' id="next-link" href="Google_Earth_Engine_Foundations.html" title="next page">Google Earth Engine</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
