deploy: e49a1dc775a0c8dbfbf7b6c6693471f8a5102581

--- a/geosciences/Camera_Calibration.html
+++ b/geosciences/Camera_Calibration.html
@@ -110,7 +110,7 @@
       <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine</a>
+      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
     </li>
   </ul>
   </li>
