--- a/geosciences/Google_Earth_Engine_Getting_Started_.html
+++ b/geosciences/Google_Earth_Engine_Getting_Started_.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Google Earth Engine" href="Google_Earth_Engine_Foundations.html" />
+    <link rel="next" title="Google Earth Engine Foundations" href="Google_Earth_Engine_Foundations.html" />
     <link rel="prev" title="Downloading earthquake data" href="Seismology.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -110,7 +110,7 @@
       <a href="">Google Earth Engine Getting Started</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine</a>
+      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
     </li>
   </ul>
   </li>
@@ -334,7 +334,7 @@ For each dataset there is also a few lines of code provided showing how to best 
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Seismology.html" title="previous page">Downloading earthquake data</a>
-    <a class='right-next' id="next-link" href="Google_Earth_Engine_Foundations.html" title="next page">Google Earth Engine</a>
+    <a class='right-next' id="next-link" href="Google_Earth_Engine_Foundations.html" title="next page">Google Earth Engine Foundations</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
