--- a/geosciences/Tides.html
+++ b/geosciences/Tides.html
@@ -110,7 +110,7 @@
       <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
     </li>
     <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine</a>
+      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
     </li>
   </ul>
   </li>
