deploy: 015999850d5fb8288e5797781b0c8ba782c3a06a

--- a/geosciences/intro.html
+++ b/geosciences/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="IMAGE FILTERING" href="Image_Filtering.html" />
+    <link rel="next" title="Image Filtering" href="Image_Filtering.html" />
     <link rel="prev" title="Introduction" href="../mathematics/complex analysis/Introduction.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -211,7 +211,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../mathematics/complex analysis/Introduction.html" title="previous page">Introduction</a>
-    <a class='right-next' id="next-link" href="Image_Filtering.html" title="next page">IMAGE FILTERING</a>
+    <a class='right-next' id="next-link" href="Image_Filtering.html" title="next page">Image Filtering</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
