--- a/geosciences/Image_Operations.html
+++ b/geosciences/Image_Operations.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Particle Image Velocimetry (PIV)" href="Particle_Image_Velocimetry.html" />
-    <link rel="prev" title="IMAGE FILTERING" href="Image_Filtering.html" />
+    <link rel="prev" title="Image Filtering" href="Image_Filtering.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -614,7 +614,7 @@ This is also frequently called histogram modification as it only alters the hist
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Image_Filtering.html" title="previous page">IMAGE FILTERING</a>
+    <a class='left-prev' id="prev-link" href="Image_Filtering.html" title="previous page">Image Filtering</a>
     <a class='right-next' id="next-link" href="Particle_Image_Velocimetry.html" title="next page">Particle Image Velocimetry (PIV)</a>
 
     </div>
