--- a/geosciences/Image_Filtering.html
+++ b/geosciences/Image_Filtering.html
@@ -241,6 +241,12 @@
 <p>Filtering is a neighbourhood operation, in which the value of the pixel in the output image is determined by applying some alogrithm to the values of the pixels in the neighbourhood of the corresponding input pixel. All of the examples found below are linear filtering operations in which the value of an output pixel is a linear combination of the values of the pixels in the input pixels neighbourhood.</p>
 <p>What we aim to achieve is to have a moving window across our image which calculates an average of the values of the input image within the window for the central pixel. This smoothens the contrast between pixels.</p>
 <img src="Data_Image_Filtering/convolution_graphical.png" style="width:30%" class ="center"/>
+<div style="display: flex; justify-content: center">
+        <img src="Data_Image_Filtering/convolution_graphical.png">
+</div>
+<div style="justify-content: center">
+        <img src="Data_Image_Filtering/convolution_graphical.png" style="width:30%">
+</div>
 <p>This can be acccomplished through convolution, which is a neighbourhood operation in which each output pixel is the weighted sum of neighbouring input pixels. The matrix of weights is called the convolution kernel, below we show a 3x3 kernel that we will use for our moving average filter:</p>
 <img src="Data_Image_Filtering/kernel.png" style="width:15%; float: center"  />
 <p>To prevent against empty values at the edges of the image we can use padding, for instance we can place zero values in these cells or mirror the available values within our window. If this is not done and we ignore the edge pixels we will reduce the size of our image.</p>
