deploy: 4a2612919805029ea6e6aad65f9c829c8dd57926

--- a/mathematics/Fourier Series.html
+++ b/mathematics/Fourier Series.html
@@ -89,6 +89,9 @@
       <a href="Fractals.html">Fractals</a>
     </li>
     <li class="">
+      <a href="Linear_Regression.html">Linear Regression</a>
+    </li>
+    <li class="">
       <a href="Big_O_notation.html">Big O Notation</a>
     </li>
     <li class="">
