--- a/mathematics/Big_O_notation.html
+++ b/mathematics/Big_O_notation.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Solving (or “timestepping”) an ordinary differential equation (ODE)" href="Timestepping_an_ODE.html" />
-    <link rel="prev" title="Fractals" href="Fractals.html" />
+    <link rel="prev" title="Linear Regression" href="Linear_Regression.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -87,6 +87,9 @@
     </li>
     <li class="">
       <a href="Fractals.html">Fractals</a>
+    </li>
+    <li class="">
+      <a href="Linear_Regression.html">Linear Regression</a>
     </li>
     <li class="active">
       <a href="">Big O Notation</a>
@@ -323,7 +326,7 @@ if for large enough <span class="math notranslate nohighlight">\(n\)</span>, whe
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Fractals.html" title="previous page">Fractals</a>
+    <a class='left-prev' id="prev-link" href="Linear_Regression.html" title="previous page">Linear Regression</a>
     <a class='right-next' id="next-link" href="Timestepping_an_ODE.html" title="next page">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
 
     </div>
