--- a/mathematics/Fractals.html
+++ b/mathematics/Fractals.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Big O notation" href="Big_O_notation.html" />
+    <link rel="next" title="Linear Regression" href="Linear_Regression.html" />
     <link rel="prev" title="Taylor series" href="Taylor_series.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -87,6 +87,9 @@
     </li>
     <li class="active">
       <a href="">Fractals</a>
+    </li>
+    <li class="">
+      <a href="Linear_Regression.html">Linear Regression</a>
     </li>
     <li class="">
       <a href="Big_O_notation.html">Big O Notation</a>
@@ -687,7 +690,7 @@ y \in \langle 0.1, 0.3\rangle\end{split}\]</div>
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Taylor_series.html" title="previous page">Taylor series</a>
-    <a class='right-next' id="next-link" href="Big_O_notation.html" title="next page">Big O notation</a>
+    <a class='right-next' id="next-link" href="Linear_Regression.html" title="next page">Linear Regression</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
