--- a/mathematics/Taylor_series.html
+++ b/mathematics/Taylor_series.html
@@ -89,6 +89,9 @@
       <a href="Fractals.html">Fractals</a>
     </li>
     <li class="">
+      <a href="Linear_Regression.html">Linear Regression</a>
+    </li>
+    <li class="">
       <a href="Big_O_notation.html">Big O Notation</a>
     </li>
     <li class="">
