deploy: 14ff62054e6c551467b725ad3f3550c321aabf2e

--- a/geosciences/Camera_Calibration.html
+++ b/geosciences/Camera_Calibration.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Tides" href="Tides.html" />
-    <link rel="prev" title="Dynamic Earth and Planets" href="Dynamic_Earth.html" />
+    <link rel="prev" title="Remote Sensing: Image Point Operations" href="Image_Point_Operations.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -93,6 +93,9 @@
     </li>
     <li class="">
       <a href="Dynamic_Earth.html">Dynamic Earth</a>
+    </li>
+    <li class="">
+      <a href="Image_Point_Operations.html">Image Point Operations</a>
     </li>
     <li class="active">
       <a href="">Camera Calibration</a>
@@ -427,7 +430,7 @@ Ideal procedure to take pictures for calibration can be found <a class="referenc
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Dynamic_Earth.html" title="previous page">Dynamic Earth and Planets</a>
+    <a class='left-prev' id="prev-link" href="Image_Point_Operations.html" title="previous page">Remote Sensing: Image Point Operations</a>
     <a class='right-next' id="next-link" href="Tides.html" title="next page">Tides</a>
 
     </div>
