--- a/geosciences/Wave_dispersion.html
+++ b/geosciences/Wave_dispersion.html
@@ -95,6 +95,9 @@
       <a href="Dynamic_Earth.html">Dynamic Earth</a>
     </li>
     <li class="">
+      <a href="Image_Point_Operations.html">Image Point Operations</a>
+    </li>
+    <li class="">
       <a href="Camera_Calibration.html">Camera Calibration</a>
     </li>
     <li class="">
