deploy: 161345126ee96b4bcd5f5c5a8424479d823d49bb

--- a/geosciences/Image_Filtering.html
+++ b/geosciences/Image_Filtering.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Remote Sensing" href="Image_Operations.html" />
+    <link rel="next" title="Particle Image Velocimetry (PIV)" href="Particle_Image_Velocimetry.html" />
     <link rel="prev" title="Geosciences" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -81,9 +81,6 @@
   <ul class="nav sidenav_l2">
     <li class="active">
       <a href="">Image Filtering</a>
-    </li>
-    <li class="">
-      <a href="Image_Operations.html">Image Operations</a>
     </li>
     <li class="">
       <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
@@ -534,7 +531,7 @@ https://en.wikipedia.org/wiki/Edge_detection</p>
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Geosciences</a>
-    <a class='right-next' id="next-link" href="Image_Operations.html" title="next page">Remote Sensing</a>
+    <a class='right-next' id="next-link" href="Particle_Image_Velocimetry.html" title="next page">Particle Image Velocimetry (PIV)</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
