--- a/geosciences/Particle_Image_Velocimetry.html
+++ b/geosciences/Particle_Image_Velocimetry.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
-    <link rel="prev" title="Remote Sensing" href="Image_Operations.html" />
+    <link rel="prev" title="Image Filtering" href="Image_Filtering.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -81,9 +81,6 @@
   <ul class="nav sidenav_l2">
     <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
-    </li>
-    <li class="">
-      <a href="Image_Operations.html">Image Operations</a>
     </li>
     <li class="active">
       <a href="">Particle Image Velocimetry (PIV)</a>
@@ -663,7 +660,7 @@ end of iterative process.. Re-arranging vector fields..
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Image_Operations.html" title="previous page">Remote Sensing</a>
+    <a class='left-prev' id="prev-link" href="Image_Filtering.html" title="previous page">Image Filtering</a>
     <a class='right-next' id="next-link" href="Cartography_Cartopy.html" title="next page">Creating maps in Cartopy</a>
 
     </div>
