deploy: ad2e27d2d3f29a9600afee34cca3892c997a0bda

--- a/geosciences/Image_Filtering.html
+++ b/geosciences/Image_Filtering.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Particle Image Velocimetry (PIV)" href="Particle_Image_Velocimetry.html" />
-    <link rel="prev" title="Geosciences" href="intro.html" />
+    <link rel="prev" title="Image Transformations" href="Image_Transformations.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -79,6 +79,9 @@
   <li class="active">
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
+    <li class="">
+      <a href="Image_Transformations.html">Image Transformations</a>
+    </li>
     <li class="active">
       <a href="">Image Filtering</a>
     </li>
@@ -530,7 +533,7 @@ https://en.wikipedia.org/wiki/Edge_detection</p>
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Geosciences</a>
+    <a class='left-prev' id="prev-link" href="Image_Transformations.html" title="previous page">Image Transformations</a>
     <a class='right-next' id="next-link" href="Particle_Image_Velocimetry.html" title="next page">Particle Image Velocimetry (PIV)</a>
 
     </div>
