--- a/geosciences/Particle_Image_Velocimetry.html
+++ b/geosciences/Particle_Image_Velocimetry.html
@@ -80,6 +80,9 @@
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
+      <a href="Image_Transformations.html">Image Transformations</a>
+    </li>
+    <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
     </li>
     <li class="active">
