--- a/geosciences/intro.html
+++ b/geosciences/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Image Filtering" href="Image_Filtering.html" />
+    <link rel="next" title="Image Transformations" href="Image_Transformations.html" />
     <link rel="prev" title="Introduction" href="../mathematics/complex analysis/Introduction.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,6 +79,9 @@
   <li class="active">
     <a href="">Geosciences</a>
   <ul class="nav sidenav_l2">
+    <li class="">
+      <a href="Image_Transformations.html">Image Transformations</a>
+    </li>
     <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
     </li>
@@ -211,7 +214,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../mathematics/complex analysis/Introduction.html" title="previous page">Introduction</a>
-    <a class='right-next' id="next-link" href="Image_Filtering.html" title="next page">Image Filtering</a>
+    <a class='right-next' id="next-link" href="Image_Transformations.html" title="next page">Image Transformations</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
