deploy: 582e9ac937c41c37fefca8c5c811b86ecdf3070f

--- a/genindex.html
+++ b/genindex.html
@@ -199,17 +199,21 @@
 </li>
       <li><a href="geosciences/Cartography_Cartopy.html#index-1">Cartopy: plotting shapefiles</a>
 </li>
-      <li><a href="mathematics/sets and functions/functions.html#index-1">Codomain</a>
+      <li><a href="mathematics/complex analysis/integrating.html#index-0">Cauchy&#39;s theorem</a>
 </li>
-      <li><a href="mathematics/sets and functions/sets.html#index-2">Commutative (Abelian) group</a>
+      <li><a href="mathematics/complex analysis/holomorphic_functions.html#index-1">Cauchy-Riemann conditions</a>
+</li>
+      <li><a href="mathematics/sets and functions/functions.html#index-1">Codomain</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/sets and functions/sets.html#index-2">Commutative (Abelian) group</a>
+</li>
+      <li><a href="mathematics/complex analysis/intro.html#index-0">Complex Analysis</a>
+</li>
       <li><a href="mathematics/complex analysis/Introduction.html#index-0">Complex conjugate</a>
 </li>
-      <li><a href="mathematics/complex analysis/intro.html#index-0">Complex numbers</a>
-</li>
-      <li><a href="mathematics/complex analysis/compplane.html#index-0">Complex plane</a>
+      <li><a href="mathematics/complex analysis/complex_plane.html#index-0">Complex plane</a>, <a href="mathematics/complex analysis/compplane.html#index-0">[1]</a>
 </li>
       <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-3">Composition (functions)</a>
 </li>
@@ -221,7 +225,7 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/complex analysis/compplane.html#index-2">De Moivre&#39;s formula</a>
+      <li><a href="mathematics/complex analysis/complex_plane.html#index-2">De Moivre&#39;s formula</a>, <a href="mathematics/complex analysis/compplane.html#index-2">[1]</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -277,6 +281,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/complex analysis/holomorphic_functions.html#index-0">Holomorphic functions</a>
+</li>
       <li><a href="mathematics/sets and functions/elementary_functions_1.html#index-1">Hyperbolic functions</a>
 </li>
   </ul></td>
@@ -401,7 +407,7 @@
 </li>
       <li><a href="coding/Intro to Python/Matplotlib.html#index-2">Plots: scatter</a>
 </li>
-      <li><a href="mathematics/complex analysis/compplane.html#index-1">Polar form of complex numbers</a>
+      <li><a href="mathematics/complex analysis/complex_plane.html#index-1">Polar form of complex numbers</a>, <a href="mathematics/complex analysis/compplane.html#index-1">[1]</a>
 </li>
       <li><a href="coding/Intro to Python/Printing_and_formatting_statements.html#index-0">Python basics</a>
 </li>
