--- a/mathematics/complex analysis/compplane.html
+++ b/mathematics/complex analysis/compplane.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Introduction" href="Introduction.html" />
+    <link rel="next" title="Holomorphic functions" href="holomorphic_functions.html" />
     <link rel="prev" title="Complex functions" href="compfuncs.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -114,6 +114,18 @@
       </li>
       <li class="active">
         <a href="">Complex plane</a>
+      </li>
+      <li class="">
+        <a href="holomorphic_functions.html">Holomorphic Functions</a>
+      </li>
+      <li class="">
+        <a href="complex_plane.html">Complex plane</a>
+      </li>
+      <li class="">
+        <a href="integrating.html">Integrating</a>
+      </li>
+      <li class="">
+        <a href="complex_functions.html">Complex Functions</a>
       </li>
       <li class="">
         <a href="Introduction.html">Introduction</a>
@@ -392,7 +404,7 @@ z^{-1} &amp; = \frac{1}{r(\cos \varphi + i \sin \varphi)} \cdot \frac{cos \varph
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="compfuncs.html" title="previous page">Complex functions</a>
-    <a class='right-next' id="next-link" href="Introduction.html" title="next page">Introduction</a>
+    <a class='right-next' id="next-link" href="holomorphic_functions.html" title="next page">Holomorphic functions</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
