--- a/mathematics/sets and functions/logic.html
+++ b/mathematics/sets and functions/logic.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Complex Numbers" href="../complex analysis/intro.html" />
+    <link rel="next" title="Complex Analysis" href="../complex analysis/intro.html" />
     <link rel="prev" title="Sets" href="sets.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -331,7 +331,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="sets.html" title="previous page">Sets</a>
-    <a class='right-next' id="next-link" href="../complex analysis/intro.html" title="next page">Complex Numbers</a>
+    <a class='right-next' id="next-link" href="../complex analysis/intro.html" title="next page">Complex Analysis</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
